kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bordle
  namespace: default
  labels:
    app: bordle
spec:
  selector:
    app: bordle
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
