kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bordle-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - bordle.unruffled-nightingale.com
      secretName: bordle-tls
  rules:
    - host: bordle.unruffled-nightingale.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: bordle
              port:
                number: 80
